# hedge-gpt

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python.yml
agentic_stock_predictor/: .env  cli.py  config.py  main.py  predict_once.py  requirements.txt  run_backtest.py  run_pipeline.py
agentic_stock_predictor/agents/: __init__.py  base.py  llm.py  sentiment.py  technical.py
agentic_stock_predictor/backtest/: simulate.py
agentic_stock_predictor/data/: fetch.py  format.py
agentic_stock_predictor/predict/: engine.py  features.py
agentic_stock_predictor/prompts/: llm_prompt.txt
app/backend/routes/: hedge_fund.py
docker/: Dockerfile  docker-compose.yml
src/: api_server.py  backtester.py  main.py
src/hedgefund/: core.py  portfolio.py
src/utils/: ollama.py
tests/: test_agents.py  test_backtest.py  test_fetch.py  test_llm_agent.py
